Controller addition to Web Service

--- a/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels.properties
+++ b/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels.properties
@@ -1,1 +1,11 @@
-m
+
+label.message = Welcome to Date Time Calculator. Please select your choice from below 
+
+label.add_subtract = Add or Subtract from Date 
+label.get_week_day = Find the day of week for the given date
+label.get_week_number = Get the Week number for that given date
+label.natural_lang = Get the result in Natural Languade
+
+
+
+label.submit = Submit 
