--- a/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels_de_DE.properties
+++ b/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels_de_DE.properties
@@ -1,1 +1,10 @@
-m
+label.message = Willkommen bei Date Time Calculator. Bitte wählen Sie Ihre Wahl von unten
+
+label.add_subtract = Addiere oder subtrahiere vom Datum
+label.get_week_day = Finde den Wochentag für das angegebene Datum
+label.get_week_number = Liefert die Wochennummer für das angegebene Datum
+label.natural_lang = Ruft das Ergebnis in Natural Languade ab
+
+
+
+label.submit = Senden
