--- a/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels_es_ES.properties
+++ b/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels_es_ES.properties
@@ -1,1 +1,10 @@
-m
+label.message = Bienvenido a Calculadora de fecha y hora. Seleccione su elección de abajo
+
+label.add_subtract = Sumar o restar de la fecha
+label.get_week_day = Encuentra el día de la semana para la fecha indicada
+label.get_week_number = Obtenga el número de semana para esa fecha determinada
+label.natural_lang = Obtener el resultado en lenguaje natural
+
+
+
+label.submit = Enviar
