--- a/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels_fr_FR.properties
+++ b/Week2/DateTime Web Service/dateTime/src/main/java/com/sapient/i18n/home/homeLabels_fr_FR.properties
@@ -1,1 +1,10 @@
-m
+label.message = Bienvenue dans la calculatrice date-heure. Veuillez sélectionner votre choix ci-dessous
+
+label.add_subtract = Ajouter ou soustraire de la date
+label.get_week_day = Trouver le jour de la semaine pour la date donnée
+label.get_week_number = Récupère le numéro de la semaine pour cette date donnée
+label.natural_lang = Obtenez le résultat dans Natural Languade
+
+
+
+label.submit = Soumettre
